--- a/values/store-ingress.yaml
+++ b/values/store-ingress.yaml
@@ -1,18 +1,18 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: hello
-  namespace: demo
+  name: store-demo
+  namespace: store-demo
 spec:
   ingressClassName: nginx
   rules:
-    - host: hello.localhost
+    - host: store-demo.localhost
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: hello
+                name: store-demo-wordpress
                 port:
                   number: 80
